--- a/Caronae/Ride/RideListController.xib
+++ b/Caronae/Ride/RideListController.xib
@@ -60,8 +60,12 @@
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ip-RW-iit" userLabel="FilterView">
                     <rect key="frame" x="0.0" y="64" width="375" height="37"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hah-mc-HGX">
-                            <rect key="frame" x="154.5" y="8" width="205.5" height="22"/>
+                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="255" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hah-mc-HGX">
+                            <rect key="frame" x="344" y="0.0" width="31" height="37"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="37" id="GBn-cv-oaD"/>
+                                <constraint firstAttribute="width" constant="31" id="rtH-eO-Qzx"/>
+                            </constraints>
                             <state key="normal" image="ButtonClose">
                                 <color key="titleColor" red="0.92941176470588238" green="0.1803921568627451" blue="0.050980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
@@ -75,14 +79,15 @@
                             <color key="textColor" red="0.33725490196078434" green="0.33725490196078434" blue="0.34509803921568627" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CT, Freguesia" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7Q-xw-iaC">
-                            <rect key="frame" x="71.5" y="11" width="78" height="15"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="CT, Freguesia" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7Q-xw-iaC">
+                            <rect key="frame" x="71.5" y="11" width="267.5" height="15"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" red="0.33725490200000002" green="0.33725490200000002" blue="0.34509803919999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstItem="ETP-H5-MAv" firstAttribute="centerY" secondItem="0Ip-RW-iit" secondAttribute="centerY" id="11v-Ad-bMQ"/>
                         <constraint firstItem="Hah-mc-HGX" firstAttribute="centerY" secondItem="0Ip-RW-iit" secondAttribute="centerY" id="82i-ax-eQR"/>
@@ -90,7 +95,7 @@
                         <constraint firstItem="g7Q-xw-iaC" firstAttribute="leading" secondItem="ETP-H5-MAv" secondAttribute="trailing" constant="8" id="Azq-f4-Kej"/>
                         <constraint firstAttribute="height" id="KkT-80-EcW"/>
                         <constraint firstAttribute="height" priority="900" constant="37" id="Snl-jF-m6s"/>
-                        <constraint firstAttribute="trailing" secondItem="Hah-mc-HGX" secondAttribute="trailing" constant="15" id="jZA-KK-YgS"/>
+                        <constraint firstAttribute="trailing" secondItem="Hah-mc-HGX" secondAttribute="trailing" id="jZA-KK-YgS"/>
                         <constraint firstItem="g7Q-xw-iaC" firstAttribute="centerY" secondItem="0Ip-RW-iit" secondAttribute="centerY" id="n5t-qE-UQE"/>
                         <constraint firstItem="Hah-mc-HGX" firstAttribute="leading" secondItem="g7Q-xw-iaC" secondAttribute="trailing" constant="5" id="y5m-OA-Wzk"/>
                     </constraints>
@@ -110,6 +115,9 @@
                             <exclude reference="KkT-80-EcW"/>
                         </mask>
                     </variation>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="8ie-SG-7Ld" appends="YES" id="JDy-12-UWr"/>
+                    </connections>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -128,6 +136,11 @@
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <point key="canvasLocation" x="-4457.5" y="3201.5"/>
         </view>
+        <tapGestureRecognizer id="8ie-SG-7Ld">
+            <connections>
+                <action selector="didTapFilterView:" destination="-1" id="y0S-5a-32P"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="ButtonClose" width="16" height="16"/>
