--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -1647,17 +1647,17 @@ nenhuma carona.</string>
                         <viewControllerLayoutGuide type="bottom" id="Xzi-Wl-Bdn"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MJZ-pz-MHW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="700"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NT2-m5-GvC" customClass="TPKeyboardAvoidingScrollView">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="64" width="400" height="587"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x5A-6B-eNz">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="400" height="587"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDx-Di-YZG" userLabel="Motivo">
-                                                <rect key="frame" x="20" y="20" width="335" height="63"/>
+                                                <rect key="frame" x="20" y="20" width="360" height="63"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MOTIVO DO CONTATO" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wje-JL-0dE">
                                                         <rect key="frame" x="0.0" y="0.0" width="152" height="17"/>
@@ -1666,7 +1666,7 @@ nenhuma carona.</string>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UT6-Tu-ZGj">
-                                                        <rect key="frame" x="0.0" y="22" width="335" height="30"/>
+                                                        <rect key="frame" x="0.0" y="22" width="360" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="yam-nF-GJt"/>
                                                         </constraints>
@@ -1678,7 +1678,7 @@ nenhuma carona.</string>
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="232-k3-TQZ" userLabel="Separator">
-                                                        <rect key="frame" x="0.0" y="52" width="335" height="1"/>
+                                                        <rect key="frame" x="0.0" y="52" width="360" height="1"/>
                                                         <color key="backgroundColor" red="0.50588238240000005" green="0.50980395079999996" blue="0.50588238240000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="1" id="bQ3-yi-sG8"/>
@@ -1698,7 +1698,7 @@ nenhuma carona.</string>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RWO-JP-mny" userLabel="Assunto">
-                                                <rect key="frame" x="20" y="83" width="335" height="55"/>
+                                                <rect key="frame" x="20" y="83" width="360" height="55"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ASSUNTO" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E20-6x-IkA">
                                                         <rect key="frame" x="0.0" y="10" width="69" height="17"/>
@@ -1707,7 +1707,7 @@ nenhuma carona.</string>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Assunto (opcional)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bPu-xJ-teJ" customClass="CaronaeTextField">
-                                                        <rect key="frame" x="0.0" y="32" width="335" height="32"/>
+                                                        <rect key="frame" x="0.0" y="32" width="360" height="32"/>
                                                         <color key="textColor" red="0.33725491166114807" green="0.33725491166114807" blue="0.34509804844856262" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1723,7 +1723,7 @@ nenhuma carona.</string>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="niF-RV-GOB" userLabel="Mensagem">
-                                                <rect key="frame" x="20" y="153" width="335" height="396"/>
+                                                <rect key="frame" x="20" y="153" width="360" height="429"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MENSAGEM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXm-bY-nhq">
                                                         <rect key="frame" x="0.0" y="10" width="82" height="17"/>
@@ -1732,7 +1732,7 @@ nenhuma carona.</string>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ysw-F7-F0j">
-                                                        <rect key="frame" x="0.0" y="32" width="335" height="359"/>
+                                                        <rect key="frame" x="0.0" y="32" width="360" height="392"/>
                                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="mS0-3w-NhH"/>
@@ -7044,7 +7044,7 @@ nenhuma carona.</string>
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lid-pD-KlV" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="207"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="258.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cvK-4C-vwF" userLabel="Center">
                                                 <rect key="frame" x="20" y="25" width="335" height="40"/>
@@ -7224,8 +7224,14 @@ nenhuma carona.</string>
                                                     </mask>
                                                 </variation>
                                             </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adicionando um filtro você pode visualizar apenas as caronas de seu interesse." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXs-Xy-JbI">
+                                                <rect key="frame" x="20" y="135" width="335" height="31.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <color key="textColor" red="0.33725490196078434" green="0.33725490196078434" blue="0.34509803921568627" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ege-SR-NUr">
-                                                <rect key="frame" x="255" y="135" width="100" height="42"/>
+                                                <rect key="frame" x="255" y="186.5" width="100" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="200" id="4Jg-FW-dNf"/>
                                                 </constraints>
@@ -7255,20 +7261,19 @@ nenhuma carona.</string>
                                                 <variation key="widthClass=compact" constant="20"/>
                                             </constraint>
                                             <constraint firstItem="cvK-4C-vwF" firstAttribute="width" secondItem="AKf-gc-2yl" secondAttribute="width" id="BFt-IY-CSq"/>
+                                            <constraint firstItem="cvK-4C-vwF" firstAttribute="top" secondItem="Lid-pD-KlV" secondAttribute="top" constant="25" id="JxN-xp-Z95"/>
+                                            <constraint firstItem="ege-SR-NUr" firstAttribute="top" secondItem="gXs-Xy-JbI" secondAttribute="bottom" constant="20" id="NDV-bY-s7z"/>
                                             <constraint firstItem="cvK-4C-vwF" firstAttribute="leading" secondItem="AKf-gc-2yl" secondAttribute="leading" id="NZL-Qu-ZfD"/>
-                                            <constraint firstItem="cvK-4C-vwF" firstAttribute="top" secondItem="Lid-pD-KlV" secondAttribute="top" constant="10" id="Xgr-O4-KxT">
-                                                <variation key="widthClass=compact" constant="25"/>
-                                            </constraint>
+                                            <constraint firstAttribute="trailing" secondItem="gXs-Xy-JbI" secondAttribute="trailing" constant="20" id="Xam-5i-Ira"/>
+                                            <constraint firstItem="gXs-Xy-JbI" firstAttribute="top" secondItem="AKf-gc-2yl" secondAttribute="bottom" constant="20" id="gGA-gc-g9s"/>
                                             <constraint firstItem="ege-SR-NUr" firstAttribute="trailing" secondItem="cvK-4C-vwF" secondAttribute="trailing" id="jyq-zN-Oly"/>
-                                            <constraint firstItem="ege-SR-NUr" firstAttribute="top" secondItem="AKf-gc-2yl" secondAttribute="bottom" constant="69" id="pka-fe-Kbo">
-                                                <variation key="widthClass=compact" constant="20"/>
-                                            </constraint>
                                             <constraint firstAttribute="bottom" secondItem="ege-SR-NUr" secondAttribute="bottom" constant="45" id="sP3-hf-rdg">
                                                 <variation key="widthClass=compact" constant="30"/>
                                             </constraint>
                                             <constraint firstItem="AKf-gc-2yl" firstAttribute="top" secondItem="cvK-4C-vwF" secondAttribute="bottom" constant="8" id="snZ-Xu-k7P">
                                                 <variation key="widthClass=compact" constant="10"/>
                                             </constraint>
+                                            <constraint firstItem="gXs-Xy-JbI" firstAttribute="leading" secondItem="Lid-pD-KlV" secondAttribute="leading" constant="20" id="wms-pv-ZCT"/>
                                             <constraint firstAttribute="trailing" secondItem="AKf-gc-2yl" secondAttribute="trailing" constant="10" id="zaZ-ve-BRb">
                                                 <variation key="widthClass=compact" constant="20"/>
                                             </constraint>
@@ -7437,12 +7442,12 @@ nenhuma carona.</string>
         <image name="menu4" width="25" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="emk-CJ-38Y"/>
-        <segue reference="U3D-Zh-YLa"/>
-        <segue reference="kXd-xG-sw3"/>
         <segue reference="IgS-9T-cpR"/>
-        <segue reference="hM9-nM-k0Y"/>
+        <segue reference="kXd-xG-sw3"/>
+        <segue reference="yIa-C3-QN8"/>
+        <segue reference="ugX-qh-OjL"/>
         <segue reference="DwZ-AK-niy"/>
+        <segue reference="hM9-nM-k0Y"/>
         <segue reference="GIf-iz-Whw"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
